[metadata]
name = lecroyutils
version = 2.0.0
author = Silas Bartel
author_email = silas.a.bartel@gmail.com
description = Library to communicate and parse .trc files with/from LeCroy oscilloscopes.
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sibartel/lecroyutils
project_urls =
    Bug Tracker = https://github.com/sibartel/lecroyutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
keywords =
    Parse
    LeCroy
    Scope
    Oscilloscope
    TRC

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    python-vxi11

[options.packages.find]
where = src